Ensure links with targets properly cause focus

In M67 we launched activation consumption at the start of main frame
navigations. This was used to lock down a partial tab-under case:
1. Site begins to navigate itself to unwanted 3p content
2. Site subsequently launches a popup to the user's true destination

This ended up breaking tab focus for navigations with target= that
both navigate a different tab and focus it, since before UAv2
gesture state is process-global.

This change fixes this bug by avoiding gesture consumption on
navigation when the target is in a different page than the initiator.
This behavior aligns with:
 - Behavior when the target is remote
 - Behavior when UAv2 ships (since gesture consumption is per frame tree)

This change also removes the flag controlling gesture consumption as
a feature, and moves some core implementation into blink.

Bug: 856779
Change-Id: I29e26d5598e32517d025b0f44234e8b9b9a10e59
Reviewed-on: https://chromium-review.googlesource.com/1117028
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Reviewed-by: Mustaq Ahmed <mustaq@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571302}